--- a/Sweavetest/DESCRIPTION
+++ b/Sweavetest/DESCRIPTION
@@ -2,9 +2,9 @@ Package: Sweavetest
 Type: Package
 Title: Support for tests in Sweave
 Version: 1.4
-Date: 2011-10-16
+Date: 2012-08-05
 Author: Duncan Murdoch
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
-Description: Simple functions to use in four-version tests
+Description: Support for multiple choice tests
 License: GPL
 LazyLoad: yes
