--- a/Sweavetest/DESCRIPTION
+++ b/Sweavetest/DESCRIPTION
@@ -6,5 +6,6 @@ Date: 2012-08-05
 Author: Duncan Murdoch
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
 Description: Support for multiple choice tests
+Depends: tables
 License: GPL
 LazyLoad: yes
