--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Sweavetest.Rcheck/*
 Sweavetest*.tar.gz
 /Sweavetest.Rcheck
 /Sweavetest/vignettes/Sweavetest.R
+/Sweavetest/inst/sample/SampleTestIndex.csv
