--- a/Sweavetest/DESCRIPTION
+++ b/Sweavetest/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: Sweavetest
 Type: Package
 Title: Support for tests in Sweave
-Version: 2.0
-Date: 2012-10-22
-Author: Duncan Murdoch
+Version: 2.0.1
+Date: 2013-02-08
+Author: Duncan Murdoch and Adam Rahman
 Maintainer: Duncan Murdoch <murdoch@stats.uwo.ca>
 Description: Support for multiple choice tests
 Depends: tables
